--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
     "vue-papa-parse": "^2.0.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
